fix(patch): make Cosmos increment atomic, quote reserved-word fields, fix null patch entry
Applies the six blocking findings from the PR #95 portability review,
including both emulator CI failures.

- api: patch() snapshots with Collections.unmodifiableList(new ArrayList<>())
  instead of List.copyOf, so a null operation entry reaches PatchValidator and
  reports INVALID_REQUEST rather than PROVIDER_ERROR (fixes
  nullOperationEntryIsInvalid on all three providers).
- cosmos/dynamo: expression translators emit quoted per-segment field
  references (c["value"], "a"."b"), so fields named after reserved words no
  longer fail with a syntax error (fixes
  patchedValuesAreVisibleToPortableQueries; Spanner already did this).
- cosmos: INCREMENT now contributes an IS_DEFINED term plus, for an integral
  delta, a BETWEEN result bound, mirroring the condition DynamoDB attaches to
  its own increment. A 412 or untyped 400 is classified from a re-read of
  current state, falling back to CONFLICT (412) / INVALID_REQUEST (400).
- conformance: IN/BETWEEN mixed-scalar-kind coverage (6 validator units plus
  CrudConformanceTests @Order(38)).
- docs/specs: guide, compatibility, changelogs, surface comparison and
  tasks T185/T191/T192 updated to the path-scoped filter-predicate design;
  the stale If-Match ETag claims are removed.